--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
-html, body, #root {
-    width: 100%;
-    height: 100%;
+html,
+body,
+#root {
+  width: 100%;
+  height: fit-content;
 }
 
 body {
   margin: 0;
-  font-family: 'Roboto', 'Segoe UI', 'Oxygen', 'Ubuntu',
-      'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
+  font-family: "Roboto", "Segoe UI", "Oxygen", "Ubuntu", "Cantarell",
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
